--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   stream_chat_flutter: ^7.0.1
   uuid: ^4.3.3
   image_picker: ^1.0.7
+  firebase_core: ^2.24.2
+  google_sign_in: ^6.2.1
+  firebase_auth: ^4.16.0
+  shared_preferences: ^2.2.2
+  firebase_storage: ^11.6.0
 
 dev_dependencies:
   flutter_test:
