--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,3 +97,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+dependency_overrides: 
+  photo_manager: ^3.0.0-dev.2
