--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>575257601392-be3b4559obfme7u9a6fsu7mb80r42elk.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.575257601392-be3b4559obfme7u9a6fsu7mb80r42elk</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBXQrQ15TFaVaW3JIlNnjN53M_eeFXTGKQ</string>
 	<key>GCM_SENDER_ID</key>
